<resources>
    <string name="app_name">HitMeApp</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="display_name">Display Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_display_name">Display Name</string>
    <string name="settings_status">Hi there, I\'m using HitMeApp</string>
    <string name="settings_change_image_btn">CHANGE IMAGE</string>
    <string name="settings_change_status_btn">CHANGE STATUS</string>
</resources>
