<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.chimale.hitmeapp.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/default_male_avatar" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_display_name"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/settings_image"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/settings_status"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/settings_change_image_btn"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/settings_status_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/settings_image_btn"
        android:layout_alignStart="@+id/settings_image_btn"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/settings_image_btn"
        android:background="@color/colorAccent"
        android:text="@string/settings_change_status_btn"
        android:textColor="@android:color/white" />

</RelativeLayout>
